<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="display">DISPLAY</string>
    <string name="show">Display what the user enters</string>
    <string name="enter">Enter Something</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="radiobuttonmale">Male</string>
    <string name="radiobuttonfemale">Female</string>

</resources>